--- a/apps/base/grafana-operator/folders/folders.yaml
+++ b/apps/base/grafana-operator/folders/folders.yaml
@@ -58,3 +58,15 @@ spec:
   title: Kubernetes
   uid: kubernetes
 ---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaFolder
+metadata:
+  name: databases-folder
+  namespace: observability
+spec:
+  instanceSelector:
+    matchLabels:
+      dashboards: homelab
+  title: Databases
+  uid: databases
+---
