add folder and stub alerts dash

--- a/apps/base/grafana-operator/dashboards/dashboards.yaml
+++ b/apps/base/grafana-operator/dashboards/dashboards.yaml
@@ -41,3 +41,18 @@ spec:
   configMapRef:
     name: grafana-operator-dashboard
     key: grafana-operator.json
+---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDashboard
+metadata:
+  name: alerts
+  namespace: observability
+spec:
+  instanceSelector:
+    matchLabels:
+      dashboards: homelab
+  # Using empty object for dashboard in root folder.
+  folderRef: System
+  configMapRef:
+    name: grafana-operator-dashboard
+    key: grafana-operator.json
