--- a/apps/base/grafana-operator/folders/folders.yaml
+++ b/apps/base/grafana-operator/folders/folders.yaml
@@ -70,3 +70,16 @@ spec:
   title: Databases
   uid: databases
 ---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaFolder
+metadata:
+  name: observability-folder
+  namespace: observability
+spec:
+  instanceSelector:
+    matchLabels:
+      dashboards: homelab
+  title: Observability
+  uid: observability
+---
+
