--- a/apps/base/gatus/kustomize.yaml
+++ b/apps/base/gatus/kustomize.yaml
@@ -33,3 +33,22 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: gatus-alerts
+  namespace: flux-system
+spec:
+  targetNamespace: observability
+  commonMetadata:
+    labels:
+      service: gatus
+  dependsOn:
+    - name: victoria-metrics-operator
+  interval: 5m
+  path: ./apps/base/gatus/alerts
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
