--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -66,10 +66,25 @@ spec:
       create: true
       # Joined with Values.global.clusterLabel `cluster`
       additionalGroupByLabels:
-        - severity
+        - severity # low, medium, high, critical
         - owner
         - service
+        - alertname
       groups:
         gatus:
           create: true
-          rules: {}
+          rules:
+            - alert: GatusEndpointDown
+              expr: rate(gatus_results_total{success="false"}[5m])/rate(gatus_results_total[5m]) > 0.5
+              for: 5m
+              labels:
+                severity: high
+              annotations:
+                summary: Gatus Endpoint ${{ .Labels.group }}/${{ .Labels.name }} is down
+            - alert: GatusHighLatency
+              expr: avg_over_time(gatus_results_duration_seconds[5m]) > 0.5
+              for: 5m
+              labels:
+                severity: medium
+              annotations:
+                summary: Gatus Endpoint ${{ .Labels.group }}/${{ .Labels.name }} has had high latency for the last 5min
