cleanup and fix folderrefs

--- a/apps/base/gatus/dashboards/dashboards.yaml
+++ b/apps/base/gatus/dashboards/dashboards.yaml
@@ -7,7 +7,7 @@ spec:
   instanceSelector:
     matchLabels:
       dashboards: homelab
-  folderRef: System
+  folderRef: system
   configMapRef:
     name: gatus-endpoints-dashboard
     key: gatus_endpoints.json
