--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -54,7 +54,7 @@ spec:
           instanceSelector:
             matchLabels:
               dashboards: homelab
-          folderRef: Kubernetes
+          folderRef: kubernetes
       dashboards:
         victoriametrics-vmalert:
           enabled: true
