--- a/apps/base/cloudnative-pg/dashboards/dashboards.yaml
+++ b/apps/base/cloudnative-pg/dashboards/dashboards.yaml
@@ -7,5 +7,5 @@ spec:
   instanceSelector:
     matchLabels:
       dashboards: homelab
-  folderRef: Databases
+  folderRef: databases
   url: "https://raw.githubusercontent.com/cloudnative-pg/grafana-dashboards/refs/heads/main/charts/cluster/grafana-dashboard.json"
