--- a/apps/base/grafana-operator/dashboards/dashboards.yaml
+++ b/apps/base/grafana-operator/dashboards/dashboards.yaml
@@ -7,7 +7,7 @@ spec:
   instanceSelector:
     matchLabels:
       dashboards: homelab
-  folderRef: System
+  folderRef: system
   configMapRef:
     name: datasource-status-dashboard
     key: datasource-status.json
@@ -21,7 +21,7 @@ spec:
   instanceSelector:
     matchLabels:
       dashboards: homelab
-  folderRef: System
+  folderRef: system
   configMapRef:
     name: home-dashboard
     key: home.json
@@ -35,7 +35,7 @@ spec:
   instanceSelector:
     matchLabels:
       dashboards: homelab
-  folderRef: Kubernetes
+  folderRef: kubernetes
   configMapRef:
     name: grafana-operator-dashboard
     key: grafana-operator.json
@@ -49,7 +49,7 @@ spec:
   instanceSelector:
     matchLabels:
       dashboards: homelab
-  folderRef: Observability
+  folderRef: observability
   configMapRef:
     name: alerts-dashboard
     key: alerts.json
@@ -63,6 +63,6 @@ spec:
   instanceSelector:
     matchLabels:
       dashboards: homelab
-  folderRef: Observability
+  folderRef: observability
   grafanaCom:
     id: 21864
