--- a/apps/base/grafana-operator/folders/folders.yaml
+++ b/apps/base/grafana-operator/folders/folders.yaml
@@ -1,7 +1,7 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
-  name: system-folder
+  name: system
   namespace: observability
 spec:
   instanceSelector:
@@ -13,7 +13,7 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
-  name: storage-folder
+  name: storage
   namespace: observability
 spec:
   instanceSelector:
@@ -25,7 +25,7 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
-  name: fitness-folder
+  name: fitness
   namespace: observability
 spec:
   instanceSelector:
@@ -37,7 +37,7 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
-  name: network-folder
+  name: network
   namespace: observability
 spec:
   instanceSelector:
@@ -49,7 +49,7 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
-  name: kubernetes-folder
+  name: kubernetes
   namespace: observability
 spec:
   instanceSelector:
@@ -61,7 +61,7 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
-  name: databases-folder
+  name: databases
   namespace: observability
 spec:
   instanceSelector:
@@ -73,7 +73,7 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
-  name: observability-folder
+  name: observability
   namespace: observability
 spec:
   instanceSelector:
