use kubedns instead of coredns

--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -37,7 +37,10 @@ spec:
                 resources:
                   requests:
                     storage: 15Gi
-
+    kubeDns:
+      enabled: true
+    coreDns:
+      enabled: false
     # Deploy operator separately
     victoria-metrics-operator:
       enabled: false
