--- a/apps/base/grafana-operator/grafana/kustomization.yaml
+++ b/apps/base/grafana-operator/grafana/kustomization.yaml
@@ -1,6 +1,30 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+configMapGenerator:
+- name: datasource-status-dashboard
+  files:
+  - ../../../../dashboards/system/datasources_status.json
+- name: home-dashboard
+  files:
+  - ../../../../dashboards/system/home.json
+- name: grafana-operator-dashboard
+  files:
+  - ../../../../dashboards/kubernetes/grafana-operator.json
+- name: alerts-dashboard
+  files:
+  - ../../../../dashboards/observability/alerts.json
+
+generatorOptions:
+  annotations:
+    grafana_folder: System
+  labels:
+    grafana_dashboard: "1"
+  disableNameSuffixHash: true
+
 resources:
   - ./externalsecrets.yaml
   - ./grafana.yaml
   - ./datasources.yaml
+  - ./folders.yaml
+  - ./dashboards.yaml
