--- a/apps/base/grafana-operator/release/helmrelease.yaml
+++ b/apps/base/grafana-operator/release/helmrelease.yaml
@@ -13,3 +13,8 @@ spec:
     crds: CreateReplace
     cleanupOnFail: true
   interval: 15m
+  values:
+    dashboard:
+      enabled: true
+    serviceMonitor:
+      enabled: true
