--- a/apps/base/cloudnative-pg/release/helmrelease.yaml
+++ b/apps/base/cloudnative-pg/release/helmrelease.yaml
@@ -17,3 +17,7 @@ spec:
     crds: CreateReplace
     cleanupOnFail: true
   interval: 15m
+  values:
+    monitoring:
+      grafanaDashboard:
+        create: true
