--- a/apps/base/grafana-operator/grafana/kustomization.yaml
+++ b/apps/base/grafana-operator/grafana/kustomization.yaml
@@ -2,18 +2,18 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 configMapGenerator:
-- name: datasource-status-dashboard
-  files:
-  - ../../../../dashboards/system/datasources_status.json
-- name: home-dashboard
-  files:
-  - ../../../../dashboards/system/home.json
-- name: grafana-operator-dashboard
-  files:
-  - ../../../../dashboards/kubernetes/grafana-operator.json
-- name: alerts-dashboard
-  files:
-  - ../../../../dashboards/observability/alerts.json
+  - name: datasource-status-dashboard
+    files:
+      - ../../../../dashboards/system/datasources_status.json
+  - name: home-dashboard
+    files:
+      - ../../../../dashboards/system/home.json
+  - name: grafana-operator-dashboard
+    files:
+      - ../../../../dashboards/kubernetes/grafana-operator.json
+  - name: alerts-dashboard
+    files:
+      - ../../../../dashboards/observability/alerts.json
 
 generatorOptions:
   annotations:
@@ -26,6 +26,6 @@ resources:
   - ./externalsecrets.yaml
   - ./grafana.yaml
   - ./datasources.yaml
-  - ./folders.yaml
+  # - ./folders.yaml
   - ./dashboards.yaml
   - ./clusterrole.yaml
