--- a/clusters/homelab/apps/observability/kustomization.yaml
+++ b/clusters/homelab/apps/observability/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ../../../../apps/base/grafana/kustomize.yaml
   - ../../../../apps/base/victoria-metrics-k8s-stack/kustomize.yaml
   - ./namespace.yaml
 commonLabels:
