--- a/apps/base/grafana/release/kustomization.yaml
+++ b/apps/base/grafana/release/kustomization.yaml
@@ -1,5 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+configMapGenerator:
+  - name: datasource-status-dashboard
+    files:
+      - ../../../../dashboards/system/datasources_status.json
+
+generatorOptions:
+  annotations:
+    grafana_folder: System
+  labels:
+    grafana_dashboard: "1"
+
 resources:
   - ./helmrelease.yaml
   - ./externalsecrets.yaml
