change pg dashboard folder

--- a/apps/base/cloudnative-pg/release/helmrelease.yaml
+++ b/apps/base/cloudnative-pg/release/helmrelease.yaml
@@ -22,4 +22,4 @@ spec:
       grafanaDashboard:
         create: true
         annotations:
-          grafana_folder: Storage
+          grafana_folder: Databases
