--- a/apps/base/gatus/release/kustomization.yaml
+++ b/apps/base/gatus/release/kustomization.yaml
@@ -1,17 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-configMapGenerator:
-- name: gatus-endpoints-dashboard
-  files:
-  - ../../../../dashboards/system/gatus_endpoints.json
-
-generatorOptions:
-  annotations:
-    grafana_folder: System
-  labels:
-    grafana_dashboard: "1"
-  disableNameSuffixHash: true
-
 resources:
   - ./helmrelease.yaml
+  - ./dashboard.yaml
