--- a/apps/base/cloudnative-pg/kustomize.yaml
+++ b/apps/base/cloudnative-pg/kustomize.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cnpg-dashboards
+  name: cnpg-monitoring
   namespace: flux-system
 spec:
   targetNamespace: observability
@@ -26,7 +26,7 @@ spec:
     labels:
       service: cnpg
   interval: 5m
-  path: ./apps/base/cloudnative-pg/dashboards
+  path: ./apps/base/cloudnative-pg/monitoring
   prune: true
   sourceRef:
     kind: GitRepository
