--- a/apps/base/gatus/kustomize.yaml
+++ b/apps/base/gatus/kustomize.yaml
@@ -14,3 +14,20 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: gatus-monitoring
+  namespace: flux-system
+spec:
+  targetNamespace: observability
+  commonMetadata:
+    labels:
+      service: gatus
+  interval: 5m
+  path: ./apps/base/gatus/monitoring
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
