--- a/apps/base/longhorn/kustomize.yaml
+++ b/apps/base/longhorn/kustomize.yaml
@@ -16,3 +16,22 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: longhorn-monitoring
+  namespace: flux-system
+spec:
+  targetNamespace: observability
+  dependsOn:
+    - name: grafana-operator
+  commonMetadata:
+    labels:
+      service: longhorn
+  interval: 5m
+  path: ./apps/base/longhorn/monitoring
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
