--- a/apps/base/volsync/monitoring/dashboard.yaml
+++ b/apps/base/volsync/monitoring/dashboard.yaml
@@ -7,6 +7,6 @@ spec:
   instanceSelector:
     matchLabels:
       dashboards: homelab
-  folderRef: observability
+  folderRef: storage
   grafanaCom:
     id: 21356
