--- a/apps/base/longhorn/monitoring/dashboard.yaml
+++ b/apps/base/longhorn/monitoring/dashboard.yaml
@@ -8,5 +8,8 @@ spec:
     matchLabels:
       dashboards: homelab
   folderRef: storage
+  datasources:
+    - datasourceName: prometheus
+      inputName: DS_PROMETHEUS
   grafanaCom:
     id: 16888
