remove some configmap dashboards

--- a/apps/base/grafana-operator/grafana/dashboards.yaml
+++ b/apps/base/grafana-operator/grafana/dashboards.yaml
@@ -17,7 +17,7 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
-  name: alertmanager
+  name: datasource-status
   namespace: observability
 spec:
   instanceSelector:
