--- a/apps/base/grafana-operator/grafana/grafana.yaml
+++ b/apps/base/grafana-operator/grafana/grafana.yaml
@@ -32,7 +32,8 @@ spec:
 
     feature_toggles:
       externalServiceAccounts: "true"
-
+    dashboards:
+      default_home_dashboard_path: /var/lib/grafana/dashboards/system/home.json
     panels:
       enable_alpha: "true"
     unified_alerting:
