--- a/apps/base/grafana-operator/release/helmrelease.yaml
+++ b/apps/base/grafana-operator/release/helmrelease.yaml
@@ -16,5 +16,9 @@ spec:
   values:
     dashboard:
       enabled: true
+      annotations:
+        grafana_folder: Kubernetes
+      labels:
+        grafana_dashboard: "1"
     serviceMonitor:
       enabled: true
