fix volsync dashg

--- a/apps/base/volsync/monitoring/dashboard.yaml
+++ b/apps/base/volsync/monitoring/dashboard.yaml
@@ -10,6 +10,6 @@ spec:
   folderRef: storage
   datasources:
     - datasourceName: VictoriaMetrics
-      inputName: datasource
+      inputName: DS_PROMETHEUS
   grafanaCom:
     id: 21356
