fix datasource refs

--- a/apps/base/flux/kustomize.yaml
+++ b/apps/base/flux/kustomize.yaml
@@ -10,6 +10,7 @@ spec:
       service: gatus
   dependsOn:
     - victoria-metrics
+    - grafana-operator
   interval: 5m
   path: ./apps/base/flux/monitoring
   prune: true
