--- a/apps/base/volsync/monitoring/dashboard.yaml
+++ b/apps/base/volsync/monitoring/dashboard.yaml
@@ -9,7 +9,7 @@ spec:
       dashboards: homelab
   folderRef: storage
   datasources:
-    - datasourceName: VictoriaMetrics
+    - datasourceName: prometheus
       inputName: DS_PROMETHEUS
   grafanaCom:
     id: 21356
