--- a/apps/base/grafana-operator/grafana/dashboards.yaml
+++ b/apps/base/grafana-operator/grafana/dashboards.yaml
@@ -10,7 +10,7 @@ spec:
   folderRef: observability
   datasources:
     - datasourceName: prometheus
-      inputName: DS_PROMETHEUS
+      inputName: datasource
   grafanaCom:
     id: 21864
 ---
@@ -24,9 +24,7 @@ spec:
     matchLabels:
       dashboards: homelab
   folderRef: system
-  datasources:
-    - datasourceName: prometheus
-      inputName: DS_PROMETHEUS
+
   url: https://github.com/j6nca/homelab-cluster/blob/main/dashboards/system/datasources_status.json
 ---
 apiVersion: grafana.integreatly.org/v1beta1
