add cluster label to vmagent

--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -39,6 +39,11 @@ spec:
                 resources:
                   requests:
                     storage: 15Gi
+    vmagent:
+      enabled: true
+      spec:
+        externalLabels:
+          cluster: homelab
     # Deploy operator separately
     victoria-metrics-operator:
       enabled: false
