enable dragonfly-operator dashboard

--- a/apps/base/dragonfly-operator/release/helmrelease.yaml
+++ b/apps/base/dragonfly-operator/release/helmrelease.yaml
@@ -7,3 +7,19 @@ spec:
     kind: OCIRepository
     name: dragonfly-operator
   interval: 15m
+  values:
+    grafanaDashboard:
+      enabled: true
+      folder: databases
+      # -- Grafana dashboard configmap annotations.
+      annotations:
+        name: grafana_folder
+      # -- Grafana dashboard configmap labels
+      labels:
+        name: grafana_dashboard
+      grafanaOperator:
+        enabled: true
+        allowCrossNamespaceImport: true
+        # -- Selected labels for Grafana instance
+        matchLabels:
+          dashboards: homelab
