--- a/apps/base/authentik/data/database.yaml
+++ b/apps/base/authentik/data/database.yaml
@@ -7,7 +7,9 @@ spec:
   managed:
     roles:
       - name: authentik
-        passwordSecret: authentik-postgres
+        passwordSecret:
+          name: authentik-postgres
+          key: password
   storage:
     storageClass: longhorn
     size: 1Gi
