authentik secret key

--- a/apps/base/authentik/release/helmrelease.yaml
+++ b/apps/base/authentik/release/helmrelease.yaml
@@ -29,6 +29,11 @@ spec:
             secretKeyRef:
               name: authentik-postgres
               key: password
+        - name: AUTHENTIK_SECRET_KEY
+          valueFrom:
+            secretKeyRef:
+              name: authentik-config
+              key: password
     authentik:
       redis:
         host: authentik-dragonfly
