--- a/apps/base/authentik/data/externalsecrets.yaml
+++ b/apps/base/authentik/data/externalsecrets.yaml
@@ -23,3 +23,24 @@ spec:
     remoteRef:
       key: authentik-postgres
       property: password
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: authentik-config
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    creationPolicy: Owner
+    # this is how the Kind=Secret will look like
+    template:
+      data:
+        secretkey: "{{ .secretkey }}"
+
+  data:
+  - secretKey: secretkey
+    remoteRef:
+      key: authentik-secret-key
+      property: secretkey
