--- a/apps/base/authentik/data/externalsecrets.yaml
+++ b/apps/base/authentik/data/externalsecrets.yaml
@@ -43,4 +43,4 @@ spec:
   - secretKey: secretkey
     remoteRef:
       key: authentik-secret-key
-      property: secretkey
+      property: password
